--- a/LandonApi/appsettings.json
+++ b/LandonApi/appsettings.json
@@ -16,7 +16,8 @@
       "country": "England"
     },
     "Email": "info@landonhotel.com",
-    "Website": "www.landonhotel.com"
+    "Website": "www.landonhotel.com",
+    "Developed": "leviserg"
   },
   "ConnectionString": "Server=(local)\\SQLEXPRESS;Database=HotelApiDb;Uid=root;Pwd=1qAz2wSx_;"
 }
