Added Pagination and Links

--- a/LandonApi/appsettings.json
+++ b/LandonApi/appsettings.json
@@ -19,5 +19,13 @@
     "Website": "www.landonhotel.com",
     "Developed": "leviserg"
   },
-  "ConnectionString": "Server=(local)\\SQLEXPRESS;Database=HotelApiDb;Uid=root;Pwd=1qAz2wSx_;"
+  "ConnectionString": "Server=(local)\\SQLEXPRESS; Database=HotelApiDb;Trusted_connection=True;", //"Server=(local)\\SQLEXPRESS;Database=HotelApiDb;Uid=root;Pwd=1qAz2wSx_;",
+  "DayStartsOnHour": 12,
+  "MinimumStayHours": 24,
+  "MaxAdvanceBookingDays": 14,
+  "UtcOffsetHours": -7,
+  "DefaultPagingOptions": {
+    "limit": 5,
+    "offset" : 1
+  }
 }
