--- a/LandonApi/Properties/launchSettings.json
+++ b/LandonApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": false,
-      "launchUrl": "api/values", //weatherforecast
+      "launchUrl": "", //api/values or weatherforecast
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
