Added request query options Hypermedia as the Engine of Application State (HATEOAS)

--- a/LandonApi/LandonApi.csproj
+++ b/LandonApi/LandonApi.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationIcon>Martz90-Circle-Plex.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Martz90-Circle-Plex.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
